--- a/MCP_indiv_day.Rmd
+++ b/MCP_indiv_day.Rmd
@@ -512,7 +512,8 @@ print(p.3_7)
 
 if (save.fig)
   ggsave(plot = p.3_7,
-         filename = paste0("figures/wtemp_7VsLatCenter_", n_days, "days_pre.png"),
+         filename = paste0("figures/wtemp_7VsLatCenter_", 
+                           n_days, "days_pre.png"),
          device = "png",
          dpi = 600)
 
@@ -541,7 +542,61 @@ print(p.3_14)
 
 if (save.fig)
   ggsave(plot = p.3_14,
-         filename = paste0("figures/wtemp_14VsLatCenter_", n_days, "days_pre.png"),
+         filename = paste0("figures/wtemp_14VsLatCenter_", 
+                           n_days, "days_pre.png"),
+         device = "png",
+         dpi = 600)
+
+```
+
+```{r}
+# need an account with Google to download maps now... 
+# sdbay.zm <- get_map(location = c(lon = -117.17,
+#                                  lat = 32.65),
+#                     zoom = 11,
+#                     maptype = "satellite",
+#                     color = "bw",
+#                     source = "google")
+# 
+# map.sdbay.zm <- ggmap(sdbay.zm)
+
+SDBay.gis <- spTransform(readOGR(dsn = "GISfiles",
+                                           layer = "sd_bay",
+                                           verbose = FALSE),
+                                   CRS("+proj=longlat +datum=WGS84"))
+
+SDBay.df <- broom::tidy(SDBay.gis)
+p.3_14a <- ggplot(data = filter(area.df, PP == 0)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "darkblue") + 
+  geom_point(aes(x = lon.center, 
+                 y = lat.center, 
+                 color = as.factor(ID),
+                 size = doy)) + 
+  geom_path(aes(x = lon.center, 
+                 y = lat.center, 
+                 color = as.factor(ID))) + 
+  # geom_point(data = filter(area.first.df, PP == 0),
+  #            aes(x = wtemp_14.first,
+  #                y = lat.first,
+  #                color = as.factor(ID)),
+  #            size = 4)
+  labs(y = "Center of MCP (latitude)",
+       x = "Center of MCP (longitude)") + 
+  coord_map() + 
+  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+                     limits = c(-117.14, -117.085)) +
+  scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+                     limits = c(32.595, 32.645)) + 
+  theme(legend.position = "none")
+
+print(p.3_14a)
+
+if (save.fig)
+  ggsave(plot = p.3_14a,
+         filename = paste0("figures/Lon_LatCenter_", 
+                           n_days, "days_pre.png"),
          device = "png",
          dpi = 600)
 
@@ -790,6 +845,45 @@ if (save.fig)
          dpi = 600)
 ```
 
+Plot lat-lon with water temp in different colors
+
+```{r}
+p.12_7a <- ggplot(data = filter(area.df, PP == 1)) + 
+    geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "darkblue") + 
+  geom_point(aes(y = lat.center, 
+                 x = lon.center, 
+                 color = as.factor(ID),
+                 size = doy))+
+  geom_path(aes(y = lat.center, 
+                 x = lon.center, 
+                 color = as.factor(ID))) + 
+  # geom_point(data = filter(area.first.df, PP == 1),
+  #            aes(y = wtemp_7.first,
+  #                x = lon.first,
+  #                color = as.factor(ID)),
+  #            size = 4)
+  coord_map() + 
+  labs(x = "Center of MCP (longitude)",
+       y = "Center of MCP (latitude)") + 
+  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+                     limits = c(-117.14, -117.085)) +
+  scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+                     limits = c(32.595, 32.645)) + 
+  theme(legend.position = "none")
+
+print(p.12_7a)
+
+if (save.fig)
+  ggsave(plot = p.12_7a,
+         filename = paste0("figures/Lat_LonCenter_", 
+                           n_days, "days_post.png"),
+         device = "png",
+         dpi = 600)
+```
+
+
 
 ```{r}
 p.12_14 <- ggplot(data = filter(area.df, PP == 1)) + 
@@ -819,6 +913,42 @@ if (save.fig)
          dpi = 600)
 ```
 
+
+```{r}
+p.12_14a <- ggplot(data = filter(area.df, PP == 1)) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "darkblue") + 
+  geom_point(aes(y = lat.center, 
+                 x = lon.center, 
+                 color = as.factor(ID),
+                 size = doy))+
+  geom_path(aes(y = lat.center, 
+                 x = lon.center, 
+                 color = as.factor(ID))) + 
+  # geom_point(data = filter(area.first.df, PP == 1),
+  #            aes(y = wtemp_14.first,
+  #                x = lon.first,
+  #                color = as.factor(ID)),
+  #            size = 4)
+  coord_map() + 
+  labs(x = "Center of MCP (longitude)",
+       y = "Center of MCP (latitude)") + 
+  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+                     limits = c(-117.14, -117.085)) +
+  scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+                     limits = c(32.595, 32.645)) + 
+  theme(legend.position = "none")
+
+print(p.12_14a)
+
+if (save.fig)
+  ggsave(plot = p.12_14a,
+         filename = paste0("figures/LatLonCenter_", 
+                           n_days, "days_post.png"),
+         device = "png",
+         dpi = 600)
+```
 
 Did the center of MCPs changed with sampling time? 
 ```{r}
@@ -931,6 +1061,9 @@ Visual inspection of how the MCPs moved for each individual
 mcp.post.df <- do.call("rbind", mcp.post)
 #id.1 <- filter(mcp.post.df, ID == 126065)
 p.MCP.post <- ggplot(data = mcp.post.df) + 
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "darkblue") +
   geom_polygon(aes(x = long, y = lat,
                    fill = as.factor(k)),
                color = "black",
@@ -940,10 +1073,14 @@ p.MCP.post <- ggplot(data = mcp.post.df) +
   facet_wrap( ~ ID, nrow = 3) + 
   labs(x = "", y = "")+ 
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) +
-  scale_x_continuous(breaks = c(-117.13, -117.11),
-                     limits = c(-117.133, -117.09)) +
-  scale_y_continuous(breaks = c(32.61, 32.63),
-                     limits = c(32.60, 32.65)) + 
+  scale_x_continuous(breaks = c(-117.14, -117.12, -117.10),
+                     limits = c(-117.145, -117.085)) +
+  scale_y_continuous(breaks = c(32.60, 32.62, 32.64),
+                     limits = c(32.595, 32.655)) + 
+  # scale_x_continuous(breaks = c(-117.13, -117.11),
+  #                    limits = c(-117.133, -117.09)) +
+  # scale_y_continuous(breaks = c(32.61, 32.63),
+  #                    limits = c(32.60, 32.65)) + 
   theme(legend.position = "none")
 
 plot(p.MCP.post)
@@ -1005,6 +1142,9 @@ if (save.fig)
 
 ```{r}
 ggplot(data = dplyr::filter(area.df, PP == 0)) +
+  # geom_polygon(data = SDBay.df,
+  #              aes(x = long, y = lat, group = group),
+  #              fill = "darkblue") + 
   geom_point(aes(x = lon.center,
                  y = lat.center)) + 
   geom_path(aes(x = lon.center,
